// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flex-basis: 100% 1`] = `
{
  "44": {
    "unit": 4,
    "value": 100,
  },
}
`;

exports[`flex-basis: 100px 1`] = `
{
  "44": {
    "unit": 2,
    "value": 100,
  },
}
`;

exports[`flex-basis: auto 1`] = `
{
  "44": {
    "unit": 1,
    "value": 0,
  },
}
`;
